Style: Fix overflow bug in form

--- a/src/App.css
+++ b/src/App.css
@@ -12,5 +12,6 @@ body, html {
   justify-content: center;
   align-items: center;
   background: #f5f5f5;
+  overflow-x: hidden;
 }
 
