--- a/src/style/Form.css
+++ b/src/style/Form.css
@@ -1,4 +1,6 @@
-
+body,html{
+    overflow: hidden;
+}
 
 form{
     display: flex;
@@ -40,6 +42,7 @@ button{
     align-items: center; 
     text-align: center;
     color: #D9D9D9;
+    margin-bottom: 15px;
 }
 
 .optionSeparator hr{
@@ -73,6 +76,7 @@ button{
         height: 100dvh;
         width: 100dvw;
         border: none;
+        justify-content:center;
     }
     
 }
